[package]
name = "container-expl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.9.1"
interfaces = "0.0.6"

anyhow = "1.0"
thiserror = "1.0"

pico-args = "0.4.2"
ureq = "2.1.1"
#reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }